# spellbot

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  .pylintrc  .vulture_allowlist.py  ADMINISTRATION.md  API.md  APPLICATION_DESCRIPTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Dockerfile.bot  Dockerfile.dash  INTEGRATIONS.md  LICENSE.md  Makefile  PRIVACY_POLICY.md  README.md  SECURITY.md  SERVICES.md  TERMS_OF_SERVICE.md  codecov.yml  crowdin.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  servers.yaml  shell  (+3 more)
.augment/rules/: python.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  codeql-analysis.yml  codeql.yml  deploy-prod.yml  deploy-production.yml  deploy.yml  pages.yml  terraform.yml
conf/: datadog.yaml  grafana-brackets.json  grafana-spellbot.json  grafana.json  servers.yaml  supervisord.conf
dash/: .eslintrc.js  README.md  package.json
dash/public/: index.html  manifest.json
dash/src/: environment.d.ts  index.tsx  react-app-env.d.ts
docs/: .gitignore  404.html  CNAME  Makefile  README.md  _config.yml  beautiful-jekyll-theme.gemspec  convoke-setup.md  index.html  staticman.yml  status.html
docs/_includes/: head.html  header.html  nav.html  search.html  social-networks-links.html
docs/_layouts/: base.html  page.html
docs/demo/: index.html
grafana/: SpellBot.json
infrastructure/: README.md
infrastructure/app/: .terraform.lock.hcl  acm.tf  alb.tf  db-secrets.tf  ecr.tf  ecs-cluster.tf  ecs-iam.tf  ecs-logs.tf  ecs-services.tf  ecs-task-prod.tf  ecs-task-stage.tf  ecs-task-staging.tf  ecs-tasks.tf  elasticache.tf  environments.tf  iam.tf  main.tf  outputs.tf  rds.tf  route53.tf  secrets.tf  sg.tf  terraform.tfvars  vanity_domains.tf  variables.tf  vpc.tf
infrastructure/db/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/o11y/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
scripts/: api-main.py  build.sh  cleanup-ecr.sh  create-token.sh  create_db_revision.py  deploy-ecs.sh  deploy.sh  docker-dash-run.sh  downgrade.py  enums.py  generate_demo_analytics.py  local-db.sh  publish.sh  seed.py  setup.sh  sort_strings.py  start-proxy.sh  start-spellapi.sh  start-spellbot.sh  start.sh  supervisord.conf  update_docs.sh  update_servers.py  vendor-docs-assets.mjs
scripts/legacy/: apply_upgrade_from_v6.sql  stage_upgrade_from_v6.sql
sql/: games-by-power.sql  games-by-size.sql  games-by-tag.sql  games-per-day.sql  games-per-server.sql  games-per-week.sql  points-by-team.sql  report.sh  retention-curve.sql  servers-per-day.sql  team-names.sql  teams-by-users.sql  top-eight-players.sql  users-by-points.sql  users-per-day.sql
src/spellapi/: __init__.py
src/spellbot/: __init__.py  _version.py  assets.py  audit.py  branding.py  cli.py  client.py  constants.py  data.py  database.py  debug.py  dm_limiter.py  enums.py  environment.py  errors.py  i18n.py  logs.py  metrics.py  operations.py  patches.py  reactions.py  redis_client.py  settings.py  shard_status.py  spelltable.py  tablestream.py  tasks.py  tracing.py  utils.py
tests/: __init__.py  conftest.py  constants.py  fixtures.py  mixins.py  test_audit_install.py  test_bot.py  test_branding.py  test_cli.py  test_codebase.py  test_dm_limiter.py  test_enums.py  test_i18n.py  test_meta.py  test_migrations.py  test_operations.py  test_reactions.py  test_settings.py  test_shard_status.py  test_spellbot.py  test_spelltable.py  test_tasks.py  test_tracing.py  test_utils.py  test_zmeta.py
tests-js/: analytics_pure.test.js  analytics_pure_extra.test.js  dashboard_pure.test.js  dashboard_pure_extra.test.js
tests/__snapshots__/: test_cli.ambr
tests/_test_data/: ipsum_2011.txt
tests/actions/: test_lfg_action.py  test_lfg_actions.py  test_tasks_aciton.py  test_tasks_action.py
tests/cogs/: test_about.py  test_about_cog.py  test_admin.py  test_admin_cog.py  test_analytics_cog.py  test_ban.py  test_ban_cog.py  test_block.py  test_block_cog.py  test_config.py  test_config_cog.py  test_events.py  test_events_cog.py  test_leave.py  test_leave_cog.py  test_lfg.py  test_lfg_cog.py  test_lfg_cog_concurrency.py  test_lfg_cog_points.py  test_lfg_concurrency.py  test_lfg_points.py  test_mod_cog.py  test_owner_cog.py  test_playgroup_cog.py  test_record_cog.py  test_score.py  test_score_cog.py  test_sync_cog.py  test_verify_cog.py  test_watch_cog.py
tests/factories/: __init__.py  alert.py  award.py  block.py  channel.py  config.py  game.py  guild.py  guild_member.py  mirror.py  notification.py  play.py  post.py  queue.py  record.py  signup.py  token.py  tourney.py  user.py  verify.py  watch.py
tests/fixtures/: client.py  quotes.txt
tests/helpers/: constants.py
tests/integration/: test_girudo.py
tests/integrations/: test_convoke.py  test_edhlab.py  test_girudo.py  test_playgroup_live.py  test_spelltable.py  test_tablestream.py
tests/interactions/: test_base.py  test_lfg.py  test_task.py
tests/mocks/: __init__.py  client.py  discord.py  girudo.py  users.py
tests/models/: test_alert.py  test_award.py  test_block.py  test_channel.py  test_config.py  test_game.py  test_guild.py  test_guild_member.py  test_mirror.py  test_notification.py  test_play.py  test_post.py  test_queue.py  test_record.py  test_token.py  test_user.py  test_verify.py  test_watch.py  test_web_editable.py
tests/services/: test_alerts.py  test_apps.py  test_audit.py  test_awards.py  test_channels.py  test_dashboard.py  test_games.py  test_guilds.py  test_notifications.py  test_patreon.py  test_plays.py  test_queues.py  test_users.py  test_verifies.py  test_watches.py
tests/snapshots/: test_on_message_help_0.txt  test_on_message_help_1.txt  test_on_message_help_2.txt  test_on_message_spellbot_help_0.txt  test_on_message_spellbot_help_1.txt  test_on_message_spellbot_help_2.txt
tests/web/: conftest.py  test_admin_auth.py  (+13 more)
(+371 files in other folders)
