[project]
authors = [{name = "Amy Troschinetz", email = "spellbot@lexicalunit.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Communications :: Chat",
  "Topic :: Games/Entertainment :: Board Games",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aiohttp-jinja2>=1.6",
  "aiohttp-session>=2.12.1",
  "aiohttp>=3.9.4",
  "alembic>=1.13.1",
  "babel>=2.14.0",
  "click>=8.1.7",
  "cryptography>=48.0.0",
  "datadog>=0.49.1",
  "ddtrace>=3.16.2",
  "discord-py>=2.7.1",
  "dunamai>=1.19.2",
  "greenlet>=3.5.0",
  "gunicorn>=21.2.0",
  "httpx>=0.28.1",
  "humanize>=4.9.0",
  "hupper>=1.12.1",
  "packaging>=24.0",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.14.1",
  "python-dateutil>=2.8.2",
  "python-i18n[yaml]>=0.3.9",
  "python-json-logger>=3.3.0",
  "redis>=6.1.0",
  "sqlalchemy>=2.0.41",
  "tenacity>=9.0.0",
  "uvloop>=0.19",
  "wrapt>=1,<3",
]
description = "The Discord bot for Webcam Magic"
keywords = ["discord", "magic", "bot", "mtg", "webcam"]
license = {text = "MIT"}
name = "spellbot"
readme = "README.md"
requires-python = "<4,>=3.14"
version = "20.6.0"

[project.urls]
homepage = "http://spellbot.io/"
repository = "https://github.com/lexicalunit/spellbot"

[project.scripts]
spellbot = "spellbot:main"

[dependency-groups]
dev = [
  "callee>=0",
  "coverage>=7",
  "exceptiongroup>=1",
  "factory-boy>=3",
  "faker>=24",
  "gitpython>=3",
  "ipython>=9",
  "nest-asyncio>=1",
  "pexpect>=4",
  "ptyprocess>=0",
  "pylic>=3",
  "pyright>=1",
  "pytest-aiohttp>=1",
  "pytest-asyncio>=0",
  "pytest-cov>=6",
  "pytest-freezer>=0",
  "pytest-mock>=3",
  "pytest-socket>=0",
  "pytest-xdist>=3",
  "pytest>=8",
  "ruff>=0",
  "shellingham>=1",
  "syrupy>=5.1.0",
  "tomli>=2",
  "tomlkit>=0",
  "types-python-dateutil>=2",
  "types-pyyaml>=6",
  "virtualenv>=20",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
exclude = [
  ".env",
  ".github",
  "conf",
  "docs",
  "infrastructure",
  "terraform.tfvars",
]

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
packages = ["src/spellbot"]

[tool.pyright]
enableTypeIgnoreComments = true
ignore = [".venv", "dist"]
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "basic"

[tool.ruff]
exclude = [
  "__pypackages__",
  "_build",
  ".bzr",
  ".direnv",
  ".eggs",
  ".env",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "buck-out",
  "build",
  "dist",
  "env",
  "node_modules",
  "venv",
]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "A001",
  "A002",
  "A005",
  "ANN202",
  "ANN401",
  "ARG001",
  "ARG002",
  "ARG003",
  "ARG005",
  "BLE001",
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D211",
  "D212",
  "ERA001",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "ISC001",
  "N801",
  "N802",
  "N806",
  "PGH003",
  "PIE796",
  "PLC0415",
  "PLR0911",
  "PLR0913",
  "PLR2004",
  "S101",
  "S311",
  "TD002",
  "TD003",
]
[tool.ruff.lint.per-file-ignores]
"src/spellbot/migrations/*" = ["INP001"]
"src/spellbot/operations.py" = ["RET504"]
"tests/*" = [
  "EM101",
  "PT004",
  "S105",
  "SLF001",
  "TRY003",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.pylic]
safe_licenses = [
  "3-Clause BSD License",
  "Apache 2.0",
  "Apache License 2.0",
  "Apache Software License",
  "Apache-2.0 AND MIT",
  "Apache-2.0",
  "BSD License",
  "BSD-2-Clause",
  "BSD-3-Clause",
  "BSD-derived (http://www.repoze.org/LICENSE.txt)",
  "ISC License (ISCL)",
  "LICENSE.BSD3",
  "MIT AND Python-2.0",
  "MIT License",
  "MIT",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "PSF-2.0",
  "Python Software Foundation License",
  "Unlicense",
]
# Psycopg uses LGPLv3, which is ok to link against, but otherwise not compatible with the more
# permissive license of this project. We can explicitly ignore the pylic errors this causes.
unsafe_packages = ["psycopg-binary", "psycopg"]

[tool.pytest.ini_options]
addopts = """
    --no-header --disable-socket --allow-unix-socket --allow-hosts=127.0.0.1,::1 --cov --cov-append --cov-report xml:coverage.xml --cov-report=html -vv
"""
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:The default span name for @tracer.wrap on methods does not include the class name:ddtrace.internal.utils.deprecations.DDTraceDeprecationWarning",
]
